@@ -3,11 +3,13 @@ update-manager (1:0.93) intrepid; urgency=low
   [ Michael Vogt ]
   * UpdateManager/UpdateManager.py:
     - fix typo (LP: #252195)
+  * DistUpgrade/DistUpgradeController.py:
+    - fix crash in cleanup code
   
   [ Jonathan Riddell ]
   * port the kde frontend to qt4
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Jul 2008 10:50:21 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 09:01:45 +0200
 
 update-manager (1:0.92) intrepid; urgency=low
 
